--- a/style.css
+++ b/style.css
@@ -1181,3 +1181,25 @@ footer {
         font-size: 2.5rem;
     }
 }
+
+@media only screen and (max-height:700px) {
+    nav ul li a {
+        font-size: 2.5rem;
+    }
+
+    header p {
+        font-size: 50rem;
+    }
+
+    section.history div.wrapHistory {
+        padding: 50px 0 50px 0;
+    }
+
+    section.music div.wrapMusic {
+        padding: 50px 0 50px 0;
+    }
+
+    section.sport div.wrapSport {
+        padding: 50px 0 50px 0;
+    }
+}
